@@ -2750,7 +2750,8 @@ retry:
 			session_log("    rejected uTP connection");
 #endif
 			if (m_alerts.should_post<peer_blocked_alert>())
-				m_alerts.post_alert(peer_blocked_alert(torrent_handle(), endp.address()));
+				m_alerts.post_alert(peer_blocked_alert(torrent_handle()
+					, endp.address(), peer_blocked_alert::utp_disabled));
 			return;
 		}
 
@@ -2761,7 +2762,8 @@ retry:
 			session_log("    rejected TCP connection");
 #endif
 			if (m_alerts.should_post<peer_blocked_alert>())
-				m_alerts.post_alert(peer_blocked_alert(torrent_handle(), endp.address()));
+				m_alerts.post_alert(peer_blocked_alert(torrent_handle()
+					, endp.address(), peer_blocked_alert::tcp_disabled));
 			return;
 		}
 
@@ -2782,7 +2784,8 @@ retry:
 			session_log("filtered blocked ip");
 #endif
 			if (m_alerts.should_post<peer_blocked_alert>())
-				m_alerts.post_alert(peer_blocked_alert(torrent_handle(), endp.address()));
+				m_alerts.post_alert(peer_blocked_alert(torrent_handle()
+					, endp.address(), peer_blocked_alert::ip_filter));
 			return;
 		}
 
